src/Components/CartItem/CartItem.module.css
/* item */
.item{
    display: flex;
    width: 100%;
    height: 120px;
    margin-bottom: 15px;
    border: var(--border-gray);
}

/* itemImage */
.itemImage{
    box-sizing: border-box;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 120px;
    padding: 10px;
    border-right: var(--border-gray);
}

/* itemDetails */
.itemDetails{
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 100%;
    height: 100%;
    padding: 15px;
}

.itemDetails h3{
    margin: 0;
}

/* detailsHeader */
.detailsHeader{
    display: flex;
    justify-content: space-between;
}

/* detailsQuantity */
.detailsQuantity{
    display: flex;
    justify-content: space-between;
}

.detailsQuantity button{
    height: 25px;
}

@media (max-width: 500px) {
    /* item */
    .item{
        flex-direction: column;
        height: 250px;
    }

    /* itemImage */
    .itemImage{
        width: 100%;
        border-right: 0;
        border-bottom: var(--border-gray);
    }

    /* detailsHeader */
    .detailsHeader{
        flex-direction: column;
    }

    .detailsHeader h3{
        overflow: hidden;
        text-overflow: ellipsis;
    }
}

